--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web devloper portfolio website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/protfolio.css">
 </head>
+
 <body>
-    <header>
+    <header class="heading">
         <nav>
             <h1 class="nav-title">Ma<span class="ornage-text">r</span>y</h1>
             <ul>
@@ -19,6 +21,28 @@
                 <li><a href=""><button class="common-btn">Hire Me</button></a></li>
             </ul>
         </nav>
+
+        <section>
+            <div class="banner-container">
+                <div class="first-part">
+                    <img class="devloper" src="images/developer.png" alt="">
+
+                </div>
+                <div class="second-part">
+                    <h3 id="greatings">Hi, I am</h3>
+                    <h1 class="head-first">Mary Hardy</h1>
+                    <p class="para">Shot what able and cold new see hold. Friendly as an betrayed formerly <br> he. Morning because as to
+                        society behaved moments.</p>
+                    <button class="common-btn " >Download CV</button>
+                    <button class="common-btn ">Contact</button>
+                </div>
+                <div class="third-part">
+                    <img class="image-hardy" src="images/hardy.png" alt="">
+                
+
+                </div>
+            </div>
+        </section>
     </header>
     <main>
 
@@ -27,4 +51,5 @@
 
     </footer>
 </body>
+
 </html>
