added by what i do

--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
            
         </section>
 
+
+        <section class="what">
+            <h1 class="header-what">What I do</h1>
+            <p class="what-para">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+        </section>
+
     </main>
     <footer>
 
